--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,25 +1,66 @@
----
-title: "Reproducible Research: Peer Assessment 1"
-output: 
-  html_document:
-    keep_md: true
----
-
+# Reproducible Research: Peer Assessment 1
 
 ## Loading and preprocessing the data
 
-
+```{r echo=TRUE} 
+data <- read.csv("activity.csv")
+data_waNA <- data[which(data$steps!= "NA"), ]
+```
 
 ## What is mean total number of steps taken per day?
 
+```{r echo=TRUE}
+library(plyr)
+daily_steps <- ddply(data_waNA, .(date), summarise, steps=sum(steps))
+hist(daily_steps$steps, xlab="steps per day")
+```
 
+```{r echo=TRUE}
+mean(daily_steps$steps)
+median(daily_steps$steps)
+```
 
 ## What is the average daily activity pattern?
 
+```{r echo=TRUE}
+average_date <- ddply(data_waNA, .(interval), summarise, steps=mean(steps))
+plot(average_date$interval, average_date$steps, type="l", xlab="5-minute interval", 
+     ylab="Average steps",main="Average daily activity")
+```
+
+```{r echo=TRUE}
+average_date[average_date$steps==max(average_date$steps),]
+colnames(average_date)[2] <- "intervalAvg"
+```
 
 
 ## Imputing missing values
 
+```{r echo=TRUE}
+sum(is.na(data$steps))
+merged <- arrange(join(data, average_date), interval)
+merged$steps[is.na(merged$steps)] <- merged$intervalAvg[is.na(merged$steps)]
+new_daily_steps <- ddply(merged, .(date), summarise, steps=sum(steps))
+hist(new_daily_steps$steps, main="Number of Steps", 
+     xlab="steps taken each day",,)
+```
 
+```{r echo=TRUE}
+mean(new_daily_steps$steps)
+median(new_daily_steps$steps)
+daily_steps_1 <- sum(data_waNA$steps)
+daily_steps_2 <- sum(merged$steps)
+diff <- daily_steps_2 -daily_steps_1 []
+```
 
 ## Are there differences in activity patterns between weekdays and weekends?
+
+```{r echo=TRUE}
+library(lattice)
+weekdays <- weekdays(as.Date(merged$date))
+data_weekdays <- transform(merged, day=weekdays)
+data_weekdays$wk <- ifelse(data_weekdays$day %in% c("Saturday", "Sunday"),"weekend", "weekday")
+average_week <- ddply(data_weekdays, .(interval, wk), summarise, steps=mean(steps))
+xyplot(steps ~ interval | wk, data = average_week, layout = c(1, 2), type="l")
+```
+
